# git_project_status

./: .drone.yml  .gitignore  LICENSE  Pipfile  README.md  SECURITY.MD  buildpackages.sh  git_project_status.py  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dependency_review.yml  mypy.yml  pylint.yml  pytest.yml  testing.yml
git_project_status/: __init__.py  __main__.py
tests/: test_cli.py  test_nothing.py
