
[project]
name = "git_project_status"
version = "0.0.14"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.12"
description = "Check subdirectories for dirty repos."
readme = "README.md"
dependencies = ["loguru>=0.6", "GitPython>=3.1.27", "click>=8.1.3"]

keywords = ["git"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
git_project_status = "git_project_status.__main__:cli"

[dependency-groups]
dev = ["pytest", "mypy", "ruff>=0.14.8"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
